fix issue when no user msg causes picture to overlap posts

--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -48,6 +48,7 @@
 @media (min-width: 700px) {
     .profile_user-info_container{
         position: relative;
+        min-height: 192px;
     }
 
     .profile_user-info-pic {
